--- a/index.html
+++ b/index.html
@@ -4,97 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Tracker</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* General Styling */
         body {
-            font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
-            background: #f4f7f6;
-            color: #333;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
         }
 
-        /* Navbar */
-        nav {
-            position: sticky;
-            top: 0;
+        header {
             background-color: #007bff;
-            padding: 10px 20px;
+            color: white;
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            color: #fff;
-            z-index: 1000;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 10px 20px;
+        }
+
+        header img {
+            height: 60px;
+            margin-right: 20px;
+        }
+
+        header h1 {
+            font-size: 24px;
+            margin: 0;
+        }
+
+        nav {
+            background-color: #0056b3;
+            color: white;
+            padding: 10px;
+            text-align: center;
         }
 
         nav a {
-            color: #fff;
+            color: white;
             text-decoration: none;
             margin: 0 15px;
-            font-weight: bold;
+            font-size: 18px;
         }
 
         nav a:hover {
             text-decoration: underline;
         }
 
-        .dark-mode-toggle {
-            cursor: pointer;
-        }
-
-        /* Header */
-        header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            background-color: #0056b3;
-            color: white;
-        }
-
-        header img {
-            height: 60px;
-            margin-right: 15px;
-        }
-
-        /* Main Container */
         .container {
-            max-width: 700px;
-            margin: 50px auto;
+            max-width: 600px;
+            margin: 20px auto;
+            background: white;
+            border-radius: 8px;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .form-group {
+        h2 {
+            text-align: center;
+            color: #007bff;
             margin-bottom: 20px;
         }
 
         label {
-            font-weight: bold;
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
+            font-weight: bold;
         }
 
-        select, input[type="date"] {
+        select, input[type="date"], button {
             width: 100%;
             padding: 10px;
-            font-size: 16px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 4px;
+            font-size: 16px;
         }
 
         button {
-            width: 100%;
-            padding: 12px;
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 5px;
-            font-size: 18px;
             cursor: pointer;
         }
 
@@ -102,112 +88,71 @@
             background-color: #0056b3;
         }
 
-        /* Footer */
         footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #0056b3;
+            background-color: #007bff;
             color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
 
         footer a {
             color: white;
             margin: 0 10px;
+            text-decoration: none;
         }
 
         footer a:hover {
-            color: #ffeb3b;
-        }
-
-        /* Dark Mode */
-        body.dark-mode {
-            background: #121212;
-            color: #f0f0f0;
-        }
-
-        body.dark-mode nav {
-            background-color: #444;
-        }
-
-        body.dark-mode header {
-            background-color: #222;
-        }
-
-        body.dark-mode footer {
-            background-color: #222;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav>
-        <div>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Attendance</a>
-        </div>
-        <div class="dark-mode-toggle">
-            <i class="fas fa-moon"></i>
-        </div>
-    </nav>
-
-    <!-- Header -->
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2022.svg" alt="Company Logo">
+        <img src="https://via.placeholder.com/150x60?text=Company+Logo" alt="Company Logo">
         <h1>Attendance Tracker</h1>
     </header>
-
-    <!-- Main Form -->
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Attendance</a>
+    </nav>
     <div class="container">
+        <h2>Mark Attendance</h2>
         <form>
-            <div class="form-group">
-                <label for="date">Select Date:</label>
-                <input type="date" id="date" name="date">
-            </div>
-            <div class="form-group">
-                <label for="employee">Select Employee Name:</label>
-                <select id="employee" name="employee">
-                    <option value="">Select Employee</option>
-                    <!-- Employee Names -->
-                    <option value="Pankaj">Pankaj</option>
-                    <option value="Akriti">Akriti</option>
-                    <option value="Manab">Manab</option>
-                    <option value="Harshita">Harshita</option>
-                    <option value="Sakib">Sakib</option>
-                    <option value="Manu">Manu</option>
-                    <option value="Radha">Radha</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="status">Select Status:</label>
-                <select id="status" name="status">
-                    <option value="">Select Status</option>
-                    <option>Present</option>
-                    <option>Absent</option>
-                </select>
-            </div>
+            <label for="date">Select Date:</label>
+            <input type="date" id="date" name="date" value="2025-01-19">
+
+            <label for="employee">Select Employee Name:</label>
+            <select id="employee" name="employee">
+                <option value="Pankaj">Pankaj</option>
+                <option value="Akriti">Akriti</option>
+                <option value="Manab">Manab</option>
+                <option value="Harshita">Harshita</option>
+                <option value="Sakib">Sakib</option>
+                <option value="Manu">Manu</option>
+                <option value="Radha">Radha</option>
+            </select>
+
+            <label for="status">Select Status:</label>
+            <select id="status" name="status">
+                <option value="Present">Present</option>
+                <option value="Absent">Absent</option>
+                <option value="Leave">Leave</option>
+            </select>
+
             <button type="submit">Mark Attendance</button>
         </form>
     </div>
-
-    <!-- Footer -->
     <footer>
-        <p>Follow us on:</p>
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <p>&copy; 2025 Attendance Tracker, Inc.</p>
+        Follow us on: 
+        <a href="https://twitter.com">Twitter</a> | 
+        <a href="https://facebook.com">Facebook</a> | 
+        <a href="https://linkedin.com">LinkedIn</a>
+        <br>&copy; 2025 Attendance Tracker, Inc.
     </footer>
-
-    <!-- Dark Mode Script -->
-    <script>
-        const toggle = document.querySelector('.dark-mode-toggle');
-        toggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            const icon = toggle.querySelector('i');
-            icon.classList.toggle('fa-moon');
-            icon.classList.toggle('fa-sun');
-        });
-    </script>
 </body>
 </html>
