--- a/index.html
+++ b/index.html
@@ -5,55 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Tracker</title>
     <style>
+        /* General Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #007bff;
-            color: white;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #007bff, #00d2ff);
+            color: #333;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            padding: 10px 20px;
+            min-height: 100vh;
         }
 
-        header img {
-            height: 60px;
-            margin-right: 20px;
+        /* Header Styles */
+        header {
+            width: 100%;
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
         }
 
-        header h1 {
+        header .title {
             font-size: 24px;
-            margin: 0;
+            font-weight: bold;
+            color: #007bff;
         }
 
+        header .company-name {
+            font-size: 20px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        /* Navigation Styles */
         nav {
-            background-color: #0056b3;
-            color: white;
-            padding: 10px;
+            width: 100%;
+            background: #007bff;
+            padding: 10px 0;
             text-align: center;
         }
 
         nav a {
             color: white;
             text-decoration: none;
-            margin: 0 15px;
             font-size: 18px;
+            margin: 0 15px;
+            transition: color 0.3s;
         }
 
         nav a:hover {
-            text-decoration: underline;
+            color: #00d2ff;
         }
 
+        /* Main Content Styles */
         .container {
-            max-width: 600px;
-            margin: 20px auto;
-            background: white;
-            border-radius: 8px;
+            width: 90%;
+            max-width: 800px;
+            margin: 30px auto;
+            background: #fff;
+            border-radius: 10px;
             padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
@@ -62,97 +82,118 @@
             margin-bottom: 20px;
         }
 
+        .form-group {
+            margin-bottom: 20px;
+        }
+
         label {
             display: block;
             margin-bottom: 8px;
             font-weight: bold;
+            color: #333;
         }
 
         select, input[type="date"], button {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 12px;
             font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            outline: none;
+        }
+
+        select:hover, input[type="date"]:hover {
+            border-color: #007bff;
         }
 
         button {
-            background-color: #007bff;
+            background: #007bff;
             color: white;
             border: none;
             cursor: pointer;
+            font-size: 18px;
+            transition: background 0.3s;
         }
 
         button:hover {
-            background-color: #0056b3;
+            background: #0056b3;
         }
 
+        /* Footer Styles */
         footer {
-            background-color: #007bff;
+            width: 100%;
+            background: #007bff;
             color: white;
             text-align: center;
-            padding: 10px;
-            margin-top: 20px;
+            padding: 10px 0;
             position: fixed;
-            width: 100%;
             bottom: 0;
+            left: 0;
         }
 
         footer a {
             color: white;
-            margin: 0 10px;
+            margin: 0 8px;
             text-decoration: none;
         }
 
         footer a:hover {
-            text-decoration: underline;
+            color: #00d2ff;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/150x60?text=Company+Logo" alt="Company Logo">
-        <h1>Attendance Tracker</h1>
+        <div class="title">Attendance Tracker</div>
+        <div class="company-name">Nxtlift Marketing Pvt. Ltd.</div>
     </header>
+
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Attendance</a>
     </nav>
+
     <div class="container">
         <h2>Mark Attendance</h2>
         <form>
-            <label for="date">Select Date:</label>
-            <input type="date" id="date" name="date" value="2025-01-19">
+            <div class="form-group">
+                <label for="date">Select Date:</label>
+                <input type="date" id="date" name="date" value="2025-01-19">
+            </div>
 
-            <label for="employee">Select Employee Name:</label>
-            <select id="employee" name="employee">
-                <option value="Pankaj">Pankaj</option>
-                <option value="Akriti">Akriti</option>
-                <option value="Manab">Manab</option>
-                <option value="Harshita">Harshita</option>
-                <option value="Sakib">Sakib</option>
-                <option value="Manu">Manu</option>
-                <option value="Radha">Radha</option>
-            </select>
+            <div class="form-group">
+                <label for="employee">Select Employee Name:</label>
+                <select id="employee" name="employee">
+                    <option value="Pankaj">Pankaj</option>
+                    <option value="Akriti">Akriti</option>
+                    <option value="Manab">Manab</option>
+                    <option value="Harshita">Harshita</option>
+                    <option value="Sakib">Sakib</option>
+                    <option value="Manu">Manu</option>
+                    <option value="Radha">Radha</option>
+                </select>
+            </div>
 
-            <label for="status">Select Status:</label>
-            <select id="status" name="status">
-                <option value="Present">Present</option>
-                <option value="Absent">Absent</option>
-                <option value="Leave">Leave</option>
-            </select>
+            <div class="form-group">
+                <label for="status">Select Status:</label>
+                <select id="status" name="status">
+                    <option value="Present">Present</option>
+                    <option value="Absent">Absent</option>
+                    <option value="Leave">Leave</option>
+                </select>
+            </div>
 
             <button type="submit">Mark Attendance</button>
         </form>
     </div>
+
     <footer>
         Follow us on: 
         <a href="https://twitter.com">Twitter</a> | 
         <a href="https://facebook.com">Facebook</a> | 
         <a href="https://linkedin.com">LinkedIn</a>
-        <br>&copy; 2025 Attendance Tracker, Inc.
+        <br>&copy; 2025 Nxtlift Marketing Pvt. Ltd.
     </footer>
 </body>
 </html>
